<?xml version="1.0"?>
<package format="2">
  <name>rifo_gazebo</name>
  <version>0.0.0</version>
  <description>2024 Robotics Innovatory Freshman Orientaion package</description>

  <maintainer email="zcfilosvy522@gmail.com">Junha Song</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>
  <author email="davetcoleman@gmail.com">Dave Coleman</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <export>
  </export>

</package>
